# hr_pro

./: .dockerignore  .flake8  .gitignore  DEVELOPER_GUIDELINES.md  Dockerfile  README.md  analysis.json  analysis_mock.json  architecture_decision_record.md  check_l2_2_net.py  check_l6_analysis.py  check_repository.py  check_serp.py  clean_json.py  cloudbuild.yaml  criteria_bundle.json  docker-compose.yaml  main.py  out.jsonl  params.json  pyproject.toml  rabota_page.html  report.md  report_mock.md  result.jsonl  resume.json  rollback_log.md  run_agent.py  test_rabota.py  vacancy.txt
app/agent/: interpretation.py  vacancy_compressor.py
app/api/: endpoints.py
app/config/: headers.py  load_config.py  paths.py  rabotaua_filters_map.json  robotaua_filters_map.json  settings.py  workua_filters_map.json
app/core/: exceptions.py
app/execution/: executor.py  http_client.py  proxy_manager.py  resume_page.py
app/models/: __init__.py  agent.py  common.py  parsed_resume.py  resume.py  search.py  task_status.py
app/parsing/: base.py  models.py  resume.py  selectors.py  serp.py
app/project/: cleanup.py
app/services/: analysis_orchestrator.py  analyzer.py  crawler.py  legacy_parser_compat_service.py  llm_client.py  parser_client.py  parser_preview_service.py  parser_runtime_service.py  report_generator.py  url_builder.py
app/sources/: rabotaua.py  workua.py
app/storage/: redis_client.py  repository.py  vector_cache.py
app/transport/: fetcher.py
config/: app.yaml  user_agent.py
docs/00_context/: Development_Plan.md  HR-Pro_description.md
docs/01_architecture/: ADR_012_Core_Stabilization_Orchestrator_Extraction.md  File_Structure.md  Roadmap.md  System_Overview.md  api_gateway.yaml  architecture_decision_record.md
docs/01_protocols/: Protocol_3_Resilient_HTTP.md  Protocol_4_Parsing_and_Fixtures.md  Protocol_5_Local_Orchestrator_MVP.md  Protocol_L1_4_Parsing_and_Fixtures.md
docs/02_data_contracts/: Resume_Schema.md  Search_Logic.md
docs/02_handoff/: DECISIONS.md  NEXT_AGENT.md  STATUS.md
docs/03_agent/: 6.1.13_CriteriaBundle_to_SearchCommand.md  6.1.13_Fixtures.md  6.1_Fixtures.md  6.1_Interpretation.md  (+1 more)
parser_service/: Dockerfile  freshness_validator.py  main.py
scripts/: check_env.py  http_test.py  http_test_multi.py
tests/: test_analysis_freshness_flag.py  test_analysis_parse_flag.py  test_api.py  test_core_parsed_resume_contract.py  test_core_stabilization.py  test_freshness.py  test_legacy_parser_compat_service.py  test_parser_client.py  test_parser_preview_service.py  test_parser_runtime_service.py  test_parser_service_contract.py  test_parser_service_health.py  test_redis_client.py  test_runtime_config.py
tools/: analyze_structure.py  check_6_3_analyzer.py  fetch_fixtures.py
(+43 files in other folders)
